# SOC-platform

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 001_initial.sql  002_users.sql
src/: config.rs  main.rs
src/api/handlers/: alert.rs  auth.rs  health.rs  log.rs  mod.rs
src/auth/: jwt.rs
src/db/: queries.rs
src/detection/: rules.rs
src/models/: alert.rs  log_event.rs  mod.rs  user.rs
src/models/db/: queries.rs
